# falx

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: bench-datasets.md
docs/superpowers/plans/: 2026-06-12-cost-weighted-graph-opt.md  2026-06-12-weighted-synth-codegen.md  2026-06-15-fair-comparable-benchmarks.md  2026-06-15-generated-fastq-speedup.md
docs/superpowers/specs/: 2026-06-12-cost-weighted-graph-opt-design.md  2026-06-12-weighted-synth-codegen-design.md
examples/: arrow_interop.rs  avx512_probe.rs  bench.rs  bench_columns.rs  bench_csv_hash_par.rs  bench_escape.rs  bench_real.rs  bench_sustained.rs  bgzf_bench.rs  csv_geo_aggregate.rs  csv_geo_fromfile.rs  csv_geo_mmap.rs  egraph_scaling.rs  fastq.rs  generate.rs  gpu_index.rs  gpu_nvcomp.rs  gpu_pipeline.rs  gpu_pipeline_nvcomp.rs  gpu_probe.rs  gpu_query.rs  json_parity.rs  json_sum_par.rs  make_datasets.rs  opt_probe.rs  region_probe.rs  stages.rs  synth_demo.rs  validate_vcf_gz.rs  vcf_clinvar_sota.rs  vcf_gz_bench.rs  vcf_info_bench.rs
examples/build-integration/: Cargo.toml  build.rs  spec.toml
examples/build-integration/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: csv_differential.rs  ndjson_differential.rs
python/: Cargo.toml  README.md  pyproject.toml
python/src/: lib.rs
specs/: csv-geo-text.toml  csv-geo.toml  csv-hash.toml  csv-semicolon.toml  csv-typed.toml  json.toml  logfmt.toml  multi.toml  ndjson.toml  psv.toml  tsv.toml
src/: avx2.rs  bgzf.rs  codegen.rs  egraph.rs  formats.rs  graph_opt.rs  interp.rs  io.rs  ir.rs  lib.rs  scalar.rs  spec.rs  synth.rs  synth_formats.rs
src/emit/: ast.rs  c.rs  lower.rs  mod.rs  rust.rs
src/kernels/: csv.rs  csv_geo.rs  csv_geo_text.rs  csv_hash.rs  csv_typed.rs  fastq.rs  json.rs  lines.rs  logfmt.rs  mod.rs  multi.rs  ndjson.rs  tsv.rs  vcf.rs  vcf_typed.rs
tests/: codegen.rs  columns.rs  comments.rs  egraph.rs  emit.rs  emit_lower.rs  graph_opt.rs  ir.rs  lines_per_record.rs  ndjson_id_score.rs  nested.rs  noodles_parity.rs  spans.rs  synth.rs  synth_codegen.rs
tests/common/: mod.rs
