[package]
name = "falx"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "Parser generator that compiles declarative format specs into simdjson-style branchless SIMD kernels"
license = "MIT"
repository = "https://github.com/Mapika/falx"
keywords = ["simd", "parser", "parser-generator", "csv", "performance"]
categories = ["parsing", "parser-implementations", "encoding"]

[dependencies]
toml = { version = "0.8", default-features = true, optional = true }
# Pure-Rust DEFLATE (miniz_oxide backend) for the optional bgzf decompressor.
# Optional + feature-gated so the core / generated kernels stay std-only.
flate2 = { version = "1", optional = true }

[dev-dependencies]
arrow-array = "59.0.0"
arrow-buffer = "59.0.0"
arrow-csv = "59.0.0"
arrow-schema = "59.0.0"
csv = "1"
logfmt-zerocopy = "0.1.3"
needletail = { version = "0.7.3", default-features = false }
noodles-bgzf = "0.45.0"
noodles-vcf = "0.88.0"
seq_io = "0.3.4"
serde_json = "1"
simd-json = "0.17.0"

[features]
spec = ["dep:toml"]
cli = ["spec"]
# Block-parallel bgzf decompression (genomics .vcf.gz / .fastq.gz).
bgzf = ["dep:flate2"]

[[bin]]
name = "falx"
path = "src/bin/falx.rs"
required-features = ["cli"]

[[example]]
name = "bgzf_bench"
required-features = ["bgzf"]

[[example]]
name = "vcf_gz_bench"
required-features = ["bgzf"]

[[example]]
name = "validate_vcf_gz"
required-features = ["bgzf"]

[profile.release]
codegen-units = 1
lto = "thin"
