[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "falx-genomics"
version = "0.1.0"
description = ".vcf.gz -> Apache Arrow typed columns via falx's fused SIMD pipeline"
requires-python = ">=3.8"
dependencies = ["pyarrow"]

[tool.maturin]
manifest-path = "Cargo.toml"
